--- a/exercicio.html
+++ b/exercicio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
     <div style="width: 600px; height:  400px; border: solid 2px; align-items: center;  position:relative ;right: -500px;">
@@ -11,7 +12,7 @@
         <div style="position: relative; text-align: center; margin-top: 100px;">
             <label>NOME</label><input type="text" style="position: relative; right: -53px;"><br>
             <label>E-MAIL</label><input type="email" style="position: relative; right: -49px;"><br>
-            <label>SENHA</label><input type="password"style="position: relative; right: -50px;"><br>
+            <label>SENHA</label><input type="password"style="position: relative; right: -49px;"><br>
         </div>
         <button type="submit" style="position: relative; right: -250px; top: 50px;">CADASTRAR</button>
     </div>
