--- a/exercicio.html
+++ b/exercicio.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-    <div style="width: 600px; height:  400px; border: solid 2px; align-items: center;  position:relative ;right: -500px;">
-        <h1 style="position: relative; text-align: center;">FORMULÁRIO DE CADASTRO</h1>
-        <div style="position: relative; text-align: center; margin-top: 100px;">
-            <label>NOME</label><input type="text" style="position: relative; right: -53px;"><br>
-            <label>E-MAIL</label><input type="email" style="position: relative; right: -49px;"><br>
-            <label>SENHA</label><input type="password"style="position: relative; right: -50px;"><br>
+    <form>
+    <div id="quadrado">
+        <h1 id="texto-base">FORMULÁRIO DE CADASTRO</h1>
+        <div id="formulario">
+            <label class="LABELS">NOME</label><input class="INPUT" type="text"><br>
+            <label class="LABELS">EMAIL</label><input class="INPUT" type="email"><br>
+            <label class="LABELS">SENHA</label><input class="INPUT" type="password"><br>
         </div>
-        <button type="submit" style="position: relative; right: -250px; top: 50px;">CADASTRAR</button>
+        <button type="submit" style="position: relative; right: -250px; top: 50px;" id="btn_cadastrar">CADASTRAR</button>
     </div>
+    </form>
     
    
 </body>
